# sllothparse

./: .gitignore  chunk_builder.py  pdfparser.py  pyproject.toml
src/sllothparse/: __init__.py  chunk_builder.py  miscellaneous.py  pdfparser.py  utilities.py
src/sllothparse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
